compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__int_float_list.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 420
expression: "[1.0] == [1]"
---
----- SOURCE CODE
[1.0] == [1]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:10
  │
1 │ [1.0] == [1]
  │          ^^^

Expected type:

    List(Float)

Found type:

    List(Int)
